kubernetes/routing/post-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: post-route
  annotations:
    konghq.com/strip-path: 'false'
spec:
  parentRefs:
  - name: kong-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /post
    backendRefs:
    - name: postservice-service
      kind: Service
      port: 9002
