kubernetes/routing/user-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: user-route
  annotations:
    konghq.com/strip-path: 'false'
spec:
  parentRefs:
  - name: kong-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /user
    backendRefs:
    - name: userservice-service
      kind: Service
      port: 9001
